; ModuleID = '/home/carl/AnghaBench/php-src/ext/phar/extr_dirstream.c_phar_dir_read.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/phar/extr_dirstream.c_phar_dir_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.TYPE_4__ = type { i8* }

@HASH_KEY_NON_EXISTENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i8*, i64)* @phar_dir_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @phar_dir_read(%struct.TYPE_5__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to i32*
  store i32* %15, i32** %9, align 8
  %16 = load i64, i64* @HASH_KEY_NON_EXISTENT, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = call i64 @zend_hash_get_current_key(i32* %17, i32** %10, i32* %11)
  %19 = icmp eq i64 %16, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %54

21:                                               ; preds = %3
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @zend_hash_move_forward(i32* %22)
  %24 = load i32*, i32** %10, align 8
  %25 = call i64 @ZSTR_LEN(i32* %24)
  %26 = load i64, i64* %7, align 8
  %27 = call i64 @MIN(i64 %25, i64 %26)
  store i64 %27, i64* %8, align 8
  %28 = load i64, i64* %8, align 8
  %29 = icmp eq i64 %28, 0
  br i1 %29, label %35, label %30

30:                                               ; preds = %21
  %31 = load i64, i64* %7, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = call i64 @ZSTR_LEN(i32* %32)
  %34 = icmp ult i64 %31, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %30, %21
  store i32 0, i32* %4, align 4
  br label %54

36:                                               ; preds = %30
  %37 = load i8*, i8** %6, align 8
  %38 = call i32 @memset(i8* %37, i32 0, i32 8)
  %39 = load i8*, i8** %6, align 8
  %40 = bitcast i8* %39 to %struct.TYPE_4__*
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 0
  %42 = load i8*, i8** %41, align 8
  %43 = load i32*, i32** %10, align 8
  %44 = call i32 @ZSTR_VAL(i32* %43)
  %45 = load i64, i64* %8, align 8
  %46 = call i32 @memcpy(i8* %42, i32 %44, i64 %45)
  %47 = load i8*, i8** %6, align 8
  %48 = bitcast i8* %47 to %struct.TYPE_4__*
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 0
  %50 = load i8*, i8** %49, align 8
  %51 = load i64, i64* %8, align 8
  %52 = add i64 %51, 1
  %53 = getelementptr inbounds i8, i8* %50, i64 %52
  store i8 0, i8* %53, align 1
  store i32 8, i32* %4, align 4
  br label %54

54:                                               ; preds = %36, %35, %20
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i64 @zend_hash_get_current_key(i32*, i32**, i32*) #1

declare dso_local i32 @zend_hash_move_forward(i32*) #1

declare dso_local i64 @MIN(i64, i64) #1

declare dso_local i64 @ZSTR_LEN(i32*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i32, i64) #1

declare dso_local i32 @ZSTR_VAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
